name:                dayplan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/crgk/dayplan#readme
license:             BSD3
license-file:        LICENSE
author:              Chad Knight
maintainer:          chadrknight@gmail.com
copyright:           2017 Chad Knight
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dayplan
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , dates
                     , time
